# adventofcode-2023

./: .gitignore  README.md  aoc.cabal  go.mod
app/: AOC1_1.hs  AOC1_2.hs  AOC2_1.hs  AOC2_2.hs  AOC3_1.nim  AOC3_2.nim  AOC4_1.hs  AOC4_2.hs  AOC5_1-map.nim  AOC5_1.nim  AOC5_2-thread.go  AOC5_2.nim  AOC6_1.hs  AOC6_2.hs  Main.hs
inputs/: 2_1-sample.txt
