cabal-version:      2.4
name:               aoc
version:            0.1.0.0
author:             Hein Thant Maung Maung
maintainer:         me@heinthanth.com

executable aoc
    main-is:          Main.hs
    other-modules: AOC1_1, AOC1_2, AOC2_1, AOC2_2
    build-depends:    base, text, flow
    hs-source-dirs:   app
    default-language: Haskell2010
